--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div>
                 <button class="button outline">Sign Up</button>
                 <button class="button login-btn">Log in</button>
+                <img class="hidden " src="./asstes/Button Icon.png" alt="">
             </div>
         </nav>
     </header>
@@ -48,11 +49,12 @@
                         pretium nibh ipsum. Venenatis cras sed felis eget velit aliquet.</p>
                 </div>
             </div>
-            <div>
+            <div id="download-option">
                 <img src="./asstes/app.png" alt="">
             </div>
             <div class="image-heading">
-                <img src="./asstes/Frame (1).png" alt="">
+                <img class="relative img" src="./asstes/dashboard.jpg" alt="">
+                <img class="heading-absolute" src="./asstes/MockUp.png" alt="">
             </div>
         </section>
         <!-- brand collaboration -->
@@ -466,7 +468,8 @@
                     </div>
                 </div>
                 <div class="download-image relative">
-                    <img src="./asstes/Screen.png" alt="App mockup" />
+                    <img src="./asstes/Screen.png" class="" alt="App mockup" />
+                    <img src="./asstes/Change Here.png" alt="">
                     <div class="Absolutely">
                         <img src="./asstes/Change Here.png" alt="">
                     </div>
