--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 </div>
                 <div class="download-image relative">
                     <img src="./asstes/Screen.png" class="" alt="App mockup" />
-                    <img src="./asstes/Change Here.png" alt="">
+                    <img class="hidden" src="./asstes/Change Here.png" alt="">
                     <div class="Absolutely">
                         <img src="./asstes/Change Here.png" alt="">
                     </div>
